--- a/config.yaml
+++ b/config.yaml
@@ -72,7 +72,7 @@ params:
     favicon: /images/site/favicon.png
 
   # GitHub repo of your site
-  gitRepo: https://github.com/nobrelu/hugo-teste
+  gitRepo: https://github.com/nobrelu/hugo-teste/
   # Default branch of your Git repo
   gitBranch: main
 
