--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://nobrelu.github.io/hugo-teste/
+#baseURL: https://nobrelu.github.io/hugo-teste/
 
 languageCode: en-us
 title: "Data Vinci"
