--- a/.github/workflows/deploy-site.yaml
+++ b/.github/workflows/deploy-site.yaml
@@ -59,7 +59,7 @@ jobs:
           hugo \
             --gc \
             --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"          
+            --baseURL "https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/"          
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
