--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-#baseURL: https://nobrelu.github.io/hugo-teste/
+baseURL: https://nobrelu.github.io/hugo-teste/
 
 languageCode: en-us
 title: "Data Vinci"
@@ -72,9 +72,9 @@ params:
     favicon: /images/site/favicon.png
 
   # GitHub repo of your site
-  #gitRepo: https://github.com/nobrelu/hugo-teste/
+  gitRepo: https://github.com/nobrelu/hugo-teste/
   # Default branch of your Git repo
-  #gitBranch: main
+  gitBranch: main
 
   # Configure the number of section title visible in the top navbar
   topNavbar:
