--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseURL: https://nobrelu.github.io
 
-languageCode: en-us
+languageCode: pt-br
 title: "Data Vinci"
 
 # Use Hugo modules to add theme
