--- a/config.yaml
+++ b/config.yaml
@@ -37,7 +37,7 @@ languages:
     
 
 # Force a locale to be use, really useful to develop the application ! Should be commented in production, the "weight" should rocks.
-DefaultContentLanguage: en
+DefaultContentLanguage: pt-br
 
 # Allow raw html in markdown file
 markup:
