--- a/data/pt-br/author.yaml
+++ b/data/pt-br/author.yaml
@@ -1,16 +1,20 @@
 # some information about you
-name: "Datamorfose"
-nickname: "Datamorfose"
+name: "John Doe"
+nickname: "John"
 # greeting message before your name. it will default to "Hi! I am" if not provided
-greeting: "Bem-vindo! Eu sou"
+greeting: "Hi, I am"
 image: "images/author/john.png"
 # give your some contact information. they will be used in the footer
 contactInfo:
-  ইমেইল: "johndoe@example.com"
-  ফোন: "+0123456789"
+  email: "johndoe@example.com"
+  phone: "+0123456789"
+  github: johndoe
+  linkedin: johndoe
 
 # some summary about what you do
 summary:
-  - a
-  - b
-  - c
+  - I am a Developer
+  - I am a Devops
+  - I love servers
+  - I work on open-source projects
+  - I love to work with some fun projects
