--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseURL: https://nobrelu.github.io
 
-
+languageCode: en-us
 title: "Data Vinci"
 
 # Use Hugo modules to add theme
@@ -8,6 +8,14 @@ module:
   imports:
   - path: github.com/hugo-toha/toha/v4
   mounts:
+  - source: static/files
+    target: static/files
+  - source: ./node_modules/flag-icon-css/flags
+    target: static/flags
+  - source: ./node_modules/@fontsource/mulish/files
+    target: static/files
+  - source: ./node_modules/katex/dist/fonts
+    target: static/fonts
   - source: content
     target: content
   - source: static
@@ -22,12 +30,7 @@ module:
     target: i18n
   - source: archetypes
     target: archetypes
-  - source: ../../node_modules/flag-icon-css/flags
-    target: static/flags
-  - source: ../../node_modules/@fontsource/mulish/files
-    target: static/files
-  - source: ../../node_modules/katex/dist/fonts
-    target: static/fonts
+ 
 
 # Manage languages
 # For any more details, you can check the official documentation: https://gohugo.io/content-management/multilingual/
@@ -35,7 +38,6 @@ languages:
   en:
     languageName: English
     weight: 3
-    disabled: true
   bn:
     languageName:  Bn
     weight: 2
